# serializer version: 1
# name: test_compute_image_embeddings
  dict({
    'embedding_dimension': 6,
    'embedding_dtype': 'float32',
    'embedding_norms': list([
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'embedding_shapes': list([
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
    ]),
    'embedding_values': list([
      list([
        0.5246000289916992,
        0.5206000208854675,
        0.5292999744415283,
        0.23010000586509705,
        0.2304999977350235,
        0.2599000036716461,
      ]),
      list([
        0.4781999886035919,
        0.5077000260353088,
        0.5196999907493591,
        0.26570001244544983,
        0.28870001435279846,
        0.2994999885559082,
      ]),
      list([
        0.39800000190734863,
        0.4077000021934509,
        0.46720001101493835,
        0.37880000472068787,
        0.38040000200271606,
        0.41110000014305115,
      ]),
      list([
        0.4047999978065491,
        0.42239999771118164,
        0.42089998722076416,
        0.4004000127315521,
        0.40059998631477356,
        0.39980000257492065,
      ]),
      list([
        0.4645000100135803,
        0.4645000100135803,
        0.4645000100135803,
        0.34279999136924744,
        0.34279999136924744,
        0.34279999136924744,
      ]),
      list([
        0.4846000075340271,
        0.48089998960494995,
        0.4765999913215637,
        0.3197000026702881,
        0.3197999894618988,
        0.3197000026702881,
      ]),
      list([
        0.26010000705718994,
        0.21299999952316284,
        0.6151999831199646,
        0.45719999074935913,
        0.39890000224113464,
        0.37459999322891235,
      ]),
      list([
        0.5964000225067139,
        0.5400999784469604,
        0.4171999990940094,
        0.2621000111103058,
        0.23899999260902405,
        0.2296999990940094,
      ]),
      list([
        0.5022000074386597,
        0.5041999816894531,
        0.5051000118255615,
        0.28439998626708984,
        0.2831000089645386,
        0.2782999873161316,
      ]),
      list([
        0.5056999921798706,
        0.5056999921798706,
        0.5056999921798706,
        0.2784999907016754,
        0.2784999907016754,
        0.2784999907016754,
      ]),
    ]),
    'image_filenames': list([
      '00_munich_rathaus.jpg',
      '01_golden_gate_bridge.jpg',
      '02_earth_from_space.jpg',
      '03_backlit_man_looking_out.jpg',
      '04_mountain_view.jpg',
      '05_astronaut_on_moon.jpg',
      '06_fireworks_on_blue_sunset.jpg',
      '07_paper_bundle_and_pen.jpg',
      '08_herman_hesse.jpg',
      '09_martin_luther_king_jr.jpg',
    ]),
    'num_embeddings': 10,
  })
# ---
# name: test_compute_image_embeddings_all_at_once
  dict({
    'embedding_dimension': 6,
    'embedding_values': list([
      list([
        0.5246466398239136,
        0.5206447839736938,
        0.5292510986328125,
        0.2300640493631363,
        0.23046532273292542,
        0.2598549425601959,
      ]),
      list([
        0.4781765937805176,
        0.5076568126678467,
        0.519658625125885,
        0.26565104722976685,
        0.2886870205402374,
        0.2994595766067505,
      ]),
      list([
        0.3979630470275879,
        0.4076855182647705,
        0.4672101140022278,
        0.3788158595561981,
        0.38035187125205994,
        0.411051869392395,
      ]),
      list([
        0.40484437346458435,
        0.42235270142555237,
        0.4208824932575226,
        0.4003521800041199,
        0.4005855619907379,
        0.3997829854488373,
      ]),
      list([
        0.4645412862300873,
        0.4645412862300873,
        0.4645412862300873,
        0.34283339977264404,
        0.34283339977264404,
        0.34283339977264404,
      ]),
      list([
        0.4846378564834595,
        0.4809095561504364,
        0.47660142183303833,
        0.31973743438720703,
        0.3197622299194336,
        0.31972360610961914,
      ]),
      list([
        0.2601301074028015,
        0.21302247047424316,
        0.6152127981185913,
        0.457185834646225,
        0.39890074729919434,
        0.3746016025543213,
      ]),
      list([
        0.5963801145553589,
        0.5401008129119873,
        0.41721293330192566,
        0.2620631158351898,
        0.2389506846666336,
        0.2297404259443283,
      ]),
      list([
        0.502216100692749,
        0.5042033791542053,
        0.5050593018531799,
        0.28439807891845703,
        0.28313541412353516,
        0.2782537341117859,
      ]),
      list([
        0.5057275295257568,
        0.5057275295257568,
        0.5057275295257568,
        0.27851927280426025,
        0.27851927280426025,
        0.27851927280426025,
      ]),
    ]),
    'num_embeddings': 10,
  })
# ---
# name: test_compute_image_embeddings_single_batch
  dict({
    'embedding_dimension': 6,
    'embedding_dtype': 'float32',
    'embedding_norms': list([
      1.0,
      1.0,
      1.0,
      0.9999999403953552,
      1.0,
      0.9999998807907104,
      1.0,
      0.9999999403953552,
      1.0,
      1.0,
    ]),
    'embedding_shapes': list([
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
    ]),
    'embedding_values': list([
      list([
        0.5246466398239136,
        0.5206447839736938,
        0.5292510986328125,
        0.2300640493631363,
        0.23046532273292542,
        0.2598549425601959,
      ]),
      list([
        0.4781765937805176,
        0.5076568126678467,
        0.519658625125885,
        0.26565104722976685,
        0.2886870205402374,
        0.2994595766067505,
      ]),
      list([
        0.3979630470275879,
        0.4076855182647705,
        0.4672101140022278,
        0.3788158595561981,
        0.38035187125205994,
        0.411051869392395,
      ]),
      list([
        0.40484437346458435,
        0.42235270142555237,
        0.4208824932575226,
        0.4003521800041199,
        0.4005855619907379,
        0.3997829854488373,
      ]),
      list([
        0.4645412862300873,
        0.4645412862300873,
        0.4645412862300873,
        0.34283339977264404,
        0.34283339977264404,
        0.34283339977264404,
      ]),
      list([
        0.4846378564834595,
        0.4809095561504364,
        0.47660142183303833,
        0.31973743438720703,
        0.3197622299194336,
        0.31972360610961914,
      ]),
      list([
        0.2601301074028015,
        0.21302247047424316,
        0.6152127981185913,
        0.457185834646225,
        0.39890074729919434,
        0.3746016025543213,
      ]),
      list([
        0.5963801145553589,
        0.5401008129119873,
        0.41721293330192566,
        0.2620631158351898,
        0.2389506846666336,
        0.2297404259443283,
      ]),
      list([
        0.502216100692749,
        0.5042033791542053,
        0.5050593018531799,
        0.28439807891845703,
        0.28313541412353516,
        0.2782537341117859,
      ]),
      list([
        0.5057275295257568,
        0.5057275295257568,
        0.5057275295257568,
        0.27851927280426025,
        0.27851927280426025,
        0.27851927280426025,
      ]),
    ]),
    'image_filenames': list([
      '00_munich_rathaus.jpg',
      '01_golden_gate_bridge.jpg',
      '02_earth_from_space.jpg',
      '03_backlit_man_looking_out.jpg',
      '04_mountain_view.jpg',
      '05_astronaut_on_moon.jpg',
      '06_fireworks_on_blue_sunset.jpg',
      '07_paper_bundle_and_pen.jpg',
      '08_herman_hesse.jpg',
      '09_martin_luther_king_jr.jpg',
    ]),
    'num_embeddings': 10,
  })
# ---
# name: test_compute_image_embeddings_small_batches
  dict({
    'batch_size_used': 3,
    'embedding_dimension': 6,
    'embedding_values': list([
      list([
        0.4825541377067566,
        0.5013473033905029,
        0.5116933584213257,
        0.2700468599796295,
        0.2948189675807953,
        0.3067876696586609,
      ]),
      list([
        0.3979630470275879,
        0.4076855182647705,
        0.4672101140022278,
        0.3788158595561981,
        0.38035187125205994,
        0.411051869392395,
      ]),
      list([
        0.40621417760849,
        0.4237518608570099,
        0.42235177755355835,
        0.39890703558921814,
        0.39906004071235657,
        0.39833104610443115,
      ]),
      list([
        0.4694303870201111,
        0.4694303870201111,
        0.4694303870201111,
        0.3361077904701233,
        0.3361077904701233,
        0.3361077904701233,
      ]),
      list([
        0.520820140838623,
        0.5110766887664795,
        0.43892204761505127,
        0.31178703904151917,
        0.31369560956954956,
        0.28156420588493347,
      ]),
      list([
        0.3058488965034485,
        0.25643190741539,
        0.5879448056221008,
        0.45111361145973206,
        0.3998323082923889,
        0.36283689737319946,
      ]),
      list([
        0.6005426645278931,
        0.5368449091911316,
        0.40097934007644653,
        0.27653586864471436,
        0.24665617942810059,
        0.2303265631198883,
      ]),
      list([
        0.4417613744735718,
        0.44894421100616455,
        0.4267692267894745,
        0.4033930003643036,
        0.38190412521362305,
        0.3355403542518616,
      ]),
      list([
        0.5120797157287598,
        0.4622848331928253,
        0.4283306300640106,
        0.3522045314311981,
        0.3466721475124359,
        0.31043586134910583,
      ]),
    ]),
    'num_embeddings': 9,
  })
# ---
# name: test_compute_text_embeddings
  dict({
    'embedding_dimension': 6,
    'embedding_dtype': 'float32',
    'embedding_norms': list([
      0.9999999403953552,
      1.0,
      1.0,
      0.9999999403953552,
      1.0,
      0.9999999403953552,
      1.0,
      0.9999999403953552,
      1.0,
    ]),
    'embedding_values': list([
      list([
        0.39276543259620667,
        0.3342684507369995,
        0.5142591595649719,
        0.49095675349235535,
        0.28412818908691406,
        0.38440871238708496,
      ]),
      list([
        0.4372265338897705,
        0.38578811287879944,
        0.4946001470088959,
        0.3643554151058197,
        0.2829112708568573,
        0.4500861167907715,
      ]),
      list([
        0.40310201048851013,
        0.38759809732437134,
        0.5366743206977844,
        0.40310201048851013,
        0.24806277453899384,
        0.4186059534549713,
      ]),
      list([
        0.35400786995887756,
        0.21240472793579102,
        0.517396092414856,
        0.5900130867958069,
        0.21240472793579102,
        0.4106491208076477,
      ]),
      list([
        0.37723690271377563,
        0.2958720922470093,
        0.5405355095863342,
        0.47154611349105835,
        0.17752324044704437,
        0.47339531779289246,
      ]),
      list([
        0.3662179112434387,
        0.2980843484401703,
        0.5568608641624451,
        0.5231684446334839,
        0.2555008828639984,
        0.35770121216773987,
      ]),
      list([
        0.34616023302078247,
        0.28846684098243713,
        0.6022934317588806,
        0.4945146441459656,
        0.21428966522216797,
        0.3791278898715973,
      ]),
      list([
        0.3477404713630676,
        0.226787269115448,
        0.5233551859855652,
        0.5795674324035645,
        0.1965489387512207,
        0.4233362078666687,
      ]),
      list([
        0.3669673204421997,
        0.22467388212680817,
        0.4608694911003113,
        0.6116122007369995,
        0.2546303868293762,
        0.40441298484802246,
      ]),
    ]),
    'input_captions': list([
      'A beautiful golden gate bridge in San Francisco',
      'Planet Earth as seen from space showing blue oceans and white clouds',
      'A peaceful forest path with tall trees on both sides',
      'Stunning mountain landscape with snow-capped peaks',
      'Modern city skyline with tall skyscrapers at sunset',
      'Close-up view of colorful flowers in nature',
      'Busy street scene with people and vehicles',
      'Abstract geometric pattern with vibrant colors',
      'Urban architectural details and building textures',
    ]),
    'num_embeddings': 9,
  })
# ---
# name: test_generate_captions_from_image_embeddings
  dict({
    'caption_lengths': list([
      33,
      33,
      49,
      53,
      54,
      48,
      49,
      32,
      33,
      54,
    ]),
    'captions': list([
      'An image dominated by blue colors',
      'An image dominated by blue colors',
      'An image with varied blue tones like sky or water',
      'An image with varied green tones and natural elements',
      'A colorful image with balanced tones and high contrast',
      'An image with varied red tones and high contrast',
      'An image with varied blue tones like sky or water',
      'An image dominated by red colors',
      'An image dominated by blue colors',
      'A colorful image with balanced tones and high contrast',
    ]),
    'image_filenames': list([
      '00_munich_rathaus.jpg',
      '01_golden_gate_bridge.jpg',
      '02_earth_from_space.jpg',
      '03_backlit_man_looking_out.jpg',
      '04_mountain_view.jpg',
      '05_astronaut_on_moon.jpg',
      '06_fireworks_on_blue_sunset.jpg',
      '07_paper_bundle_and_pen.jpg',
      '08_herman_hesse.jpg',
      '09_martin_luther_king_jr.jpg',
    ]),
    'num_captions': 10,
  })
# ---
